# guide_pmd_std_res

./: .gitignore  CHANGELOG.md  DEV_RUBRIC.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
docs/: api.rst  benchmark_count_depth.rst  conf.py  gene_level.rst  index.rst
guide_pmd/: __init__.py  __main__.py  contrasts.py  contrasts_posthoc.py  expected_counts.py  gene_level.py  gene_level_figures.py  gene_level_flagging.py  gene_level_lmm.py  gene_level_mixture.py  gene_level_qc.py  gene_level_selection.py  gene_level_stouffer.py  gene_level_tmeta.py  pmd_std_res_guide_counts.py
scripts/: aggregate_count_depth_grid_summary.py  audit_gene_level.py  backfill_sim_gene_expected_counts.py  benchmark_count_depth.py  collect_count_depth_bucket_metrics.py  compare_gene_level_methods.py  count_depth_pipelines.py  count_depth_scenarios.py  plot_benchmark_method_agreement.py  plot_count_depth_abundance_scenarios.py  plot_count_depth_bucket_scorecards.py  plot_count_depth_confounding_diagnostics.py  plot_count_depth_depthconfounded_calibration.py  plot_count_depth_grid_heatmaps.py  plot_count_depth_grid_summary.py  plot_count_depth_p_histograms.py  plot_count_depth_scorecards.py  qc_count_depth_benchmark_suite.py  rehydrate_benchmark_run_inputs.py  run_count_depth_benchmark_suite.py  run_count_depth_grid.py  scout_abundance_params.py  suite_paths.py  triage_gene_level_disagreements.py  write_gene_level_figures_from_tables.py
tests/: conftest.py  test_baseline_golden.py  test_benchmark_count_depth_smoke.py  test_benchmark_grid_smoke.py  (+21 more)
(+8 files in other folders)
