[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guide_pmd"
version = "0.1.5"
description = "A package for analyzing CRISPR screens (or similar data), using PMD standardized residuals with linear modeling downstream"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Scott Tyler", email = "scottyler89@gmail.com" }]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "statsmodels",
  "percent_max_diff",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/scottyler89/guide_pmd_std_res"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]

[project.scripts]
guide-pmd-std-res = "guide_pmd.pmd_std_res_guide_counts:main"
guide-pmd-contrasts = "guide_pmd.contrasts_posthoc:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["guide_pmd*"]
